<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">UberClone</string>
    <string name="register_text">Start creating your Account</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="continue_text">Continue</string>
    <string name="title_activity_driver_home">DriverHomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_sign_out">Sign Out</string>

    <string name="home_second">Home Second</string>
    <string name="title_activity_maps">Map</string>
    <string name="permission_require">Location permission required</string>
</resources>